# zel

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
doc_more/: DOCS.MD  EXTENSIONS.MD  P2P-RESILIENCE.md
docs/: json_rpc_subscriptions_implementation_plan.md
zel_core/: Cargo.toml
zel_core/examples/: README.md  circuit_breaker_macro_example.rs  context_extensions_demo.rs  json_rpc_example.rs  json_rpc_proc_macro_example.rs  json_rpc_server_example.rs  json_rpc_subscriptions_example.rs  macro_service_example.rs  metrics_prometheus.rs  multi_service_example.rs  notification_example.rs  raw_stream_example.rs  reliability_demo.rs  simple.rs
zel_core/src/: iroh_helpers.rs  lib.rs  prelude.rs  protocol.rs  request_reply.rs
zel_core/src/protocol/: builder.rs  circuit_breaker.rs  circuit_breaker_stats.rs  client.rs  context.rs  error_classification.rs  extensions.rs  mod.rs  retry.rs  retry_metrics.rs  server.rs  shutdown.rs  streaming.rs  types.rs
zel_core/src/protocol/handlers/: helpers.rs  mod.rs  notification.rs  rpc.rs  stream.rs  subscription.rs
zel_core/src/request_reply/: client.rs  connection.rs  error.rs  json_rpc.rs  server.rs  transport.rs  ztest.rs
zel_core/src/request_reply/json_rpc/: client.rs  errors.rs  extensions.rs  iroh_service.rs  server.rs  transport.rs  utils.rs
zel_core/src/request_reply/server/: auth.rs  connection.rs  service.rs  transport.rs
zel_core/tests/: circuit_breaker_tests.rs  error_classification_tests.rs  protocol_integration.rs  reliability_integration.rs  retry_tests.rs
zel_macros/: Cargo.toml
zel_macros/src/: attributes.rs  helpers.rs  lib.rs  render.rs  service.rs
zel_macros/src/render/: client.rs  codegen.rs  mod.rs  server.rs  types.rs
zel_types/: Cargo.toml
zel_types/src/: lib.rs  protocol.rs
