[workspace]
members = ["zel_core", "zel_macros", "zel_types"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuddenlyHazel/zel"
readme = "README.md"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
