[package]
name = "zel_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
cobs = "0.3.0"
env_logger = "0.11.8"
futures = "0.3.31"
iroh = "0.95.1"
log = "0.4.28"
tracing = "0.1"
postcard = "1.1.3"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
tower = "0.5"
bytes = { version = "1.11.0", features = ["serde"] }

[dev-dependencies]
derive_more = "2.0.1"
