[package]
name = "zel_core"
version = "0.1.1"
edition = "2021"
description = "Type-safe RPC framework built on Iroh with support for methods, subscriptions, notifications, and raw streams"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuddenlyHazel/zel"
keywords = ["rpc", "iroh", "async", "networking", "p2p"]
categories = ["network-programming", "asynchronous"]
readme = "../README.md"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
env_logger = "0.11.8"
futures = "0.3.31"
iroh = "0.95.1"
log = "0.4.28"
tracing = "0.1"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
tower = "0.5"
bytes = { version = "1.11.0", features = ["serde"] }
zel_macros = { version = "0.1.0", path = "../zel_macros" }

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
