[package]
name = "zel_macros"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for the Zel RPC framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuddenlyHazel/zel"
keywords = ["rpc", "macro", "codegen", "procedural-macro"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
async-trait = "0.1"
