[package]
name = "zel_macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for the Zel RPC framework"
license.workspace = true
repository.workspace = true
keywords = ["rpc", "macro", "codegen", "procedural-macro"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
async-trait = "0.1"
zel_types = { version = "0.5.0", path = "../zel_types" }
