[package]
name = "zel_types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared error types for the Zel RPC framework"
keywords = ["rpc", "p2p", "iroh", "networking"]
categories = ["network-programming", "asynchronous"]
readme = "../README.md"

[dependencies]
bytes = { version = "1.11.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
